// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lyrics component renders Loading 1`] = `
<Fragment>
  <Loading />
</Fragment>
`;

exports[`Lyrics component renders Lyrics 1`] = `
<Fragment>
  <div
    className="Lyrics"
  >
    <h1>
      phony rappers
    </h1>
    <h2>
      by: 
      Tribe Called Qwest
    </h2>
    <pre>
      Phony rappers. Who do not write. Phony rappers. Who do not excite. Phony rappers. Check it out, aight
    </pre>
  </div>
</Fragment>
`;

exports[`Lyrics component renders Lyrics not found 1`] = `
<Fragment>
  <div
    className="Lyrics"
  >
    <h1>
      Sorry, no lyrics found!
    </h1>
    <img
      src="/src/assets/giphy.gif"
    />
  </div>
</Fragment>
`;
